# vdif2psrfits

./: MPIvdif2psrfitsALMA.c  MPIvdif2psrfitsPico.c  Makefile  Makefile.am  Makefile.in  Makefile~  README  README.md  aclocal.m4  bootstrap  config.h  config.h.in  config.status  configure  configure.ac  cvrt2to8.c  cvrt2to8.lo  dec2hms.c  dec2hms.h  dec2hms.lo  downsample.lo  getVDIFFrameDetection-MPI.c  getVDIFFrameDetection.c  getVDIFFrameDetection.lo  getVDIFFrametotal.c  guppi_PSRFITS_v3.4_search32bits_template.txt  host_file  host_file~  libVDIF.la  libtool  mjd2date.c  mjd2date.lo  note.txt  polyco.c  polyco.lo  psrfits.h  ran.c  test  test.c  testMPI.c  (+17 more)
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4
config/: ax_mpi.m4~  mpi.m4  mpi.m4~  package.m4
